css/landing.css
.btn{
    background-color: #5BACC3;
    color: #FFFFFF;
    padding: 1.25rem 0;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    width: 11.25rem;
}

.discount{
    padding: 10rem 0;
}

.discount__text{
    background-color: #393939;
    color: #FFFFFF;
    font-size: 2.8125rem;
    font-weight: 400;
    margin: auto;
    padding: 1.25rem 0;
    text-align: center;
    width: 90%;
}

.info{
    display: inline-block;
    margin: 0 4rem;
}

.info-container{
    margin: auto;
    width: fit-content;
}

.main-heading {
    background-color: #FFF0ED;
    padding: 3rem 0;
}

.main-heading__definition {
    width: 23.125rem;
}

.main-heading__left-container, .main-heading__right{
    display: inline-block;
}

.main-heading__left-container{
    padding-left: 128px;
    padding-top: 144px;
    vertical-align: top;
}

.main-heading__image{
    margin-left: 20%;
}

.main-heading__shop-now{
    margin-top: 3rem;
}

.product{
    background-color: #FFFFFF;
    border-radius: 10px;
    box-shadow: 0 5px 9px -1px  rgba(0, 0, 0, 0.25);
    display: inline-block;
    height: 27.5rem;
    margin: 40px;
    padding: 1.25rem;
    text-align: center;
    width: 20.625rem;
}

.product__image{
    height: 17.5rem;
}

.product__name, .product__price{
    margin-top: 1.25rem;
}

.product__price{
    margin-top: 1.25rem;
    color: #5BACC3;
}

.products{
    background-color: #F7F7F7;
    padding: 5rem 0;
}

.products__title{
    text-align: center;
}

.products__view-all{
    display: block;
    margin: 1.25rem auto 0 auto;
}

.products-container{
    margin: auto;
    width: fit-content;
}

.site-info{
    background-color: #FFF0ED;
    padding: 5rem 0;
}

.social-logo{
    height: 3.125rem;
}

